--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cms",
-  "version": "0.1.0",
+  "name": "tft-dashboard-server",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
     "start": "NODE_ENV=dev nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/server.ts",
@@ -14,12 +14,8 @@
     "@types/node": "^6.0.68",
     "@types/socket.io": "^1.4.29",
     "@types/socket.io-client": "^1.4.29",
-    "app-root-dir": "^1.0.2",
-    "async-busboy": "^0.4.0",
     "chalk": "^1.1.3",
     "config": "^1.26.1",
-    "fs-extra": "^5.0.0",
-    "jsonwebtoken": "^7.3.0",
     "koa": "^2.4.1",
     "koa-body": "^2.0.0",
     "koa-bodyparser": "^4.2.0",
@@ -29,19 +25,11 @@
     "koa-convert": "^1.2.0",
     "koa-etag": "^3.0.0",
     "koa-logger": "^2.0.1",
-    "koa-passport": "=3.0.0",
     "koa-router": "=7.0.1",
-    "koa-static": ">=4.0.1",
     "lodash": "^4.17.4",
     "moment": "=2.19.2",
     "mongoose": "^5.0.1",
-    "node-cron": "^1.2.0",
-    "nodemailer": "^4.0.1",
-    "passport-jwt": "^2.2.1",
-    "passport-local": "^1.0.0",
-    "pug": "^2.0.0-rc.4",
     "socket.io": "~2.0.4",
-    "socketio-jwt": "^4.5.0",
     "speakeasy": "^2.0.0",
     "ts-node": "^2.0.0",
     "typescript": "2.3.4",
@@ -53,22 +41,10 @@
     "@types/mousetrap": "^1.6.0",
     "@types/socket.io": "~1.4.31",
     "@types/node": "^6.0.68",
-    "chai": "*",
     "codelyzer": "~2.0.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.0.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
     "mocha": "^3.4.2",
     "node-fetch": "^1.7.1",
     "nodemon": "^1.11.0",
-    "protractor": "~5.1.0",
-    "should": "*",
-    "ts-mocha": "^1.0.3",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0"
   }
