--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "start": "NODE_ENV=dev nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/server.ts",
-    "init:dev": "NODE_ENV=dev 'ts-node' src/init/init.ts",
-    "init:prod": "NODE_ENV=production 'ts-node' src/init/init.ts",
-    "test": "NODE_ENV=test mocha -r ts-node/register src/**/*-test.spec.ts"
+    "start": "NODE_ENV=dev nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/server.ts"
   },
   "private": true,
   "dependencies": {
@@ -29,11 +26,13 @@
     "lodash": "^4.17.4",
     "moment": "=2.19.2",
     "mongoose": "^5.0.1",
-    "socket.io": "~2.0.4",
+    "node-cron": "^1.2.1",
+    "request": "^2.85.0",
+    "socket.io": "~2.1.0",
     "speakeasy": "^2.0.0",
     "ts-node": "^2.0.0",
     "typescript": "2.3.4",
-    "uuid": "git+https://bitbucket.org/kotainers/node-uuid.git"
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "@types/mongodb": "^3.0.3",
@@ -45,7 +44,7 @@
     "mocha": "^3.4.2",
     "node-fetch": "^1.7.1",
     "nodemon": "^1.11.0",
-    "ts-node": "~2.0.0",
+    "ts-node": "~6.0.0",
     "tslint": "~4.5.0"
   }
 }
