--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/socket.io-client": "^1.4.29",
     "chalk": "^1.1.3",
     "config": "^1.26.1",
+    "geoip-lite": "^1.2.1",
     "koa": "^2.4.1",
     "koa-body": "^2.0.0",
     "koa-bodyparser": "^4.2.0",
