--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,9 @@ deploy_dev:
 deploy_prod_distributors_dashboard:
   script:
     - pwd
+    - ssh-keyscan -t rsa 207.154.221.32 >> ~/.ssh/known_hosts
+    - rsync -a ./ --exclude '.git' root@207.154.221.32:/root/servers/tft
+    - ssh -i ~/.ssh/id_rsa root@207.154.221.32 -t "/root/scripts/deploy-server-tft.bash"
   only:
     - master
   allow_failure: true
