--- a/package.json
+++ b/package.json
@@ -13,21 +13,20 @@
     "chalk": "^1.1.3",
     "config": "^1.26.1",
     "geoip-lite": "^1.2.1",
-    "koa": "^2.4.1",
-    "koa-body": "^2.0.0",
+    "koa": "^2.5.1",
+    "koa-body": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
     "koa-combine-routers": "=1.0.0",
-    "koa-compress": "^2.0.0",
-    "koa-conditional-get": "^2.0.0",
     "koa-convert": "^1.2.0",
     "koa-etag": "^3.0.0",
-    "koa-logger": "^2.0.1",
-    "koa-router": "=7.0.1",
+    "koa-logger": "^3.2.0",
+    "koa-router": "^7.4.0",
+    "mongoose": "^5.0.17",
     "node-cron": "^1.2.1",
     "request": "^2.85.0",
     "socket.io": "~2.1.0",
     "speakeasy": "^2.0.0",
-    "ts-node": "^2.0.0",
+    "ts-node": "^6.0.3",
     "typescript": "2.3.4",
     "uuid": "^3.2.1",
     "xml-parser": "^1.2.1"
@@ -40,7 +39,6 @@
     "mocha": "^3.4.2",
     "node-fetch": "^1.7.1",
     "nodemon": "^1.11.0",
-    "ts-node": "~6.0.0",
     "tslint": "~4.5.0"
   }
 }
